--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/microservices": "^5.1.0",
     "@nestjs/testing": "^5.1.0",
     "@nestjs/websockets": "^5.1.0",
+    "axios": "^0.18.0",
     "class-transformer": "^0.1.7",
     "class-validator": "^0.8.1",
     "fastify-formbody": "^2.0.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^5.0.0",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
     "@types/node": "^9.3.0",
